// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the card with no props 1`] = `
<div>
  <div
    class="card"
  >
    <img
      class="card__image"
    />
    <p
      class="card__date"
    />
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      />
      <img
        alt="Arrow Icon"
        class="card__icon"
        src="arrow-upper-right-black.svg"
      />
    </div>
    <p
      class="card__info"
    />
    <ul
      class="categories-menu"
    />
  </div>
</div>
`;

exports[`Should render the card with props 1`] = `
<div>
  <div
    class="card"
  >
    <img
      class="card__image"
      src="../../assets/for-hire-image.svg"
    />
    <p
      class="card__date"
    >
      18:25
    </p>
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Card
      </h2>
      <img
        alt="Arrow Icon"
        class="card__icon"
        src="arrow-upper-right-black.svg"
      />
    </div>
    <p
      class="card__info"
    >
      lorem ipsum
    </p>
    <ul
      class="categories-menu"
    >
      <li
        class="categories-menu__item categories-menu__item--purple"
      >
        one
      </li>
      <li
        class="categories-menu__item categories-menu__item--darkpurple"
      >
        two
      </li>
      <li
        class="categories-menu__item categories-menu__item--purple"
      >
        three
      </li>
    </ul>
  </div>
</div>
`;
